--- a/productos.html
+++ b/productos.html
@@ -8,6 +8,6 @@
 </head>
 <body>
     <h1>Bienvenido/a!</h1>
-    <script src="js/index.js"></script>
+    <script src="js/script.js"></script>
 </body>
 </html>
