--- a/about.html
+++ b/about.html
@@ -6,7 +6,6 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Ramiro Urrutia</title>
     <link rel="stylesheet" href="css/style.css">
-    <link rel="stylesheet" href="css/productos.css">
 </head>
 
 <body>
@@ -20,17 +19,7 @@
             <li><a href="carrito.html">Carrito</a></li>
         </ul>
     </nav>
-    <h1>Productos</h1>
-    <div class="filtros">
-        <label>Ordenar por precio:</label>
-        <select id="ordenar-por" name="ordenar-por">
-            <option value="">Ordenar por</option>
-            <option value="ascendente">Menor a mayor</option>
-            <option value="descendente">Mayor a menor</option>
-        </select>
-    </div>
-    <div class="productos-div"></div>
-    <script src="js/productos.js"></script>
+    <script src="js/index.js"></script>
 </body>
 
 </html>
