--- a/carrito.html
+++ b/carrito.html
@@ -1,14 +1,12 @@
 <!DOCTYPE html>
 <html lang="es">
-
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Ramiro Urrutia</title>
+    <title>Carrito de Compras</title>
     <link rel="stylesheet" href="css/style.css">
-    <link rel="stylesheet" href="css/productos.css">
+    <link rel="stylesheet" href="css/carrito.css">
 </head>
-
 <body>
     <nav>
         <a href="index.html"><img src="img/logo.png" alt="Logo"></a>
@@ -20,17 +18,8 @@
             <li><a href="carrito.html">Carrito</a></li>
         </ul>
     </nav>
-    <h1>Productos</h1>
-    <div class="filtros">
-        <label>Ordenar por precio:</label>
-        <select id="ordenar-por" name="ordenar-por">
-            <option value="">Ordenar por</option>
-            <option value="ascendente">Menor a mayor</option>
-            <option value="descendente">Mayor a menor</option>
-        </select>
-    </div>
-    <div class="productos-div"></div>
-    <script src="js/productos.js"></script>
+    <h1>Carrito de Compras</h1>
+    <div class="carrito-div"></div>
+    <script src="js/carrito.js"></script>
 </body>
-
 </html>
