--- a/index.html
+++ b/index.html
@@ -1,13 +1,33 @@
 <!DOCTYPE html>
 <html lang="es">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Ramiro Urrutia</title>
-    <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="css/style.css">
 </head>
+
 <body>
-    <h1>Bienvenido/a!</h1>
+    <header>
+        <nav>
+            <a href="index.html"><img src="img/logo.png" alt="Logo"></a>
+            <ul>
+                <li><a href="index.html">Inicio</a></li>
+                <li><a href="productos.html">Productos</a></li>
+                <li><a href="about.html">Acerca de</a></li>
+                <li id="cuenta"><a href="cuenta.html">Cuenta</a></li>
+                <li><a href="carrito.html">Carrito</a></li>
+            </ul>
+        </nav>
+    </header>
+
+    <div class="intro">
+        <h1 id="h1nombre">Bienvenido/a!</h1>
+    </div>
+
     <script src="js/index.js"></script>
+    <script src="js/global.js"></script>
 </body>
+
 </html>
