--- a/about.html
+++ b/about.html
@@ -19,6 +19,7 @@
             <li><a href="carrito.html">Carrito</a></li>
         </ul>
     </nav>
+    <h3>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Laboriosam quas vitae voluptate et aspernatur, quasi ex? Voluptatem, mollitia saepe id ipsam amet eius reiciendis facilis itaque odio aliquam veritatis maxime?</h3>
     <script src="js/index.js"></script>
 </body>
 
