--- a/productos.html
+++ b/productos.html
@@ -7,6 +7,7 @@
     <title>Ramiro Urrutia</title>
     <link rel="stylesheet" href="css/style.css">
     <link rel="stylesheet" href="css/productos.css">
+    <link rel="stylesheet" type="text/css" href="https://cdn.jsdelivr.net/npm/toastify-js/src/toastify.min.css">
 </head>
 
 <body>
@@ -30,6 +31,7 @@
         </select>
     </div>
     <div class="productos-div"></div>
+    <script type="text/javascript" src="https://cdn.jsdelivr.net/npm/toastify-js"></script>
     <script src="js/productos.js"></script>
 </body>
 
